feat(sidebar): add resizability

--- a/src/app/shared/components/fab/fab.component.html
+++ b/src/app/shared/components/fab/fab.component.html
@@ -1,4 +1,4 @@
-<div class="fab">
+<div class="fab" [style.margin-right.px]="marginRight">
   <button mat-fab (click)="onClick($event)">
     <mat-icon class="mdi-plus"></mat-icon>
   </button>
