--- a/src/app/shared/components/sidebar/sidebar-container/sidebar-container.component.scss
+++ b/src/app/shared/components/sidebar/sidebar-container/sidebar-container.component.scss
@@ -14,6 +14,9 @@
   border-left: 1px solid #E0E0E0;
   transform: translateX(100%);
   z-index: 2;
+  left: auto !important;
+  min-width: 330px;
+  max-width: 700px;
 
   &.open {
     transform: translate(0);
