--- a/src/app/vm/vm-sidebar/vm-sidebar.component.html
+++ b/src/app/vm/vm-sidebar/vm-sidebar.component.html
@@ -7,7 +7,7 @@
       ></cs-vm-color>
     </div>
     <h4 class="details-header ml-1">
-      {{ entity.displayName }}</h4>
+      {{ entity.displayname }}</h4>
     <div class="vm-actions-container">
       <button
         class="vm-actions-button"
