feat(service-offering): show all service offerings even those which don't fit resources (#1299)
PR close #1229

--- a/src/app/service-offering/custom-service-offering/custom-service-offering.component.html
+++ b/src/app/service-offering/custom-service-offering/custom-service-offering.component.html
@@ -47,6 +47,10 @@
     </mat-form-field>
   </div>
 
+  <span class="error-message" *ngIf="!offering.isAvailableByResources">
+    {{ 'ERRORS.COMPUTE_OFFERING.RESOURCE_LIMIT_EXCEEDED' | translate }}
+  </span>
+
   <div class="mat-dialog-actions">
     <button
       mat-button
@@ -60,7 +64,7 @@
       mat-button
       color="primary"
       type="submit"
-      [disabled]="!hardwareForm.valid"
+      [disabled]="!hardwareForm.valid || !offering.isAvailableByResources"
     >
       {{ 'COMMON.CONFIRM' | translate }}
     </button>
