--- a/src/app/vm/vm-creation/vm-creation.component.html
+++ b/src/app/vm/vm-creation/vm-creation.component.html
@@ -248,7 +248,7 @@
           mat-button
           color="primary"
           type="submit"
-          [disabled]="!vmCreateForm.valid || nameIsTaken() || !vmCreationState.template"
+          [disabled]="isSubmitButtonDisabled(vmCreateForm.valid)"
         >
           {{ 'COMMON.CREATE' | translate }}
         </button>
