--- a/src/app/vm/vm-creation/components/service-offering-selector/service-offering-selector.component.html
+++ b/src/app/vm/vm-creation/components/service-offering-selector/service-offering-selector.component.html
@@ -14,6 +14,9 @@
     <span class="service-offering-info truncate" [matTooltip]="offeringName | async">
       {{ offeringName | async }}
     </span>
+    <span class="error-message" *ngIf="!serviceOffering.isAvailableByResources">
+      {{ 'ERRORS.COMPUTE_OFFERING.RESOURCE_LIMIT_EXCEEDED' | translate }}
+    </span>
   </ng-template>
   <ng-template #nameStub>
     {{ 'VM_PAGE.VM_CREATION.NO_OFFERINGS' | translate }}
