--- a/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
@@ -1,107 +1,71 @@
-<div *ngIf="vm">
-  <h3>{{ title | translate }}</h3>
-  <mat-tab-group
-    [(selectedIndex)]="tabIndex">
-    <ng-container *ngFor="let act of actions; let i = index">
-      <mat-tab [disabled]="!act.available(vm)" [label]="act.name | translate">
-        <ng-container *ngIf="i === 0 || i === 2">
-          <div class="parameter-wrapper">
-            <h4><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b>
-              {{ getUrlLogin(vm) }}
-            </h4>
-            <h4>
-              <b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b>
-              {{ getUrlPassword(vm) }}
-            </h4>
-            <h4 *ngIf="i === 2">
-              <b>{{ 'VM_POST_ACTION.OPEN_URL' | translate }}:</b>
+<h3 mat-dialog-title>{{ 'VM_PAGE.COMMANDS.VM_ACCESS' | translate }}</h3>
+<mat-tab-group>
+  <mat-tab mat-tab-class="my-class" [label]="'VM_POST_ACTION.VNC_CONSOLE' | translate">
+    <div class="parameter-wrapper">
+      <p><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b> {{ vncAccessService.getLogin(vm) }}</p>
+      <p><b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b> {{ getVncPassword(vm) }}</p>
+    </div>
 
-              <cs-input-group>
-                <mat-form-field cs-input-group-textbox>
-                  <input matInput [value]="getAddress(vm)" readonly>
-                </mat-form-field>
-                <cs-clipboard-button
-                  cs-input-group-button
-                  [value]="getAddress(vm)"
-                  tooltipPosition="below"
-                ></cs-clipboard-button>
-              </cs-input-group>
-            </h4>
-          </div>
+    <p class="action-link">
+      <a (click)="openConsoleVm(vm)">{{ 'VM_POST_ACTION.OPEN_VNC_CONSOLE' | translate }}</a>
+    </p>
+  </mat-tab>
 
-          <div *ngIf="i === 0" class="action-link">
-            <a (click)="act.activate(vm)">
-              {{ act.actionName | translate }}
-            </a>
-          </div>
-        </ng-container>
-        <ng-container *ngIf="i === 1">
-          <div class="parameter-wrapper">
-            <h4 class="height-container">
-              <b>{{ 'VM_POST_ACTION.CONNECTION_STRING_4' | translate }}:</b>
-              <cs-input-group>
-                <mat-form-field cs-input-group-textbox>
-                  <input matInput [value]="getConnectionString(vm, vm.nic[0].ipaddress)" readonly>
-                </mat-form-field>
-                <cs-clipboard-button
-                  cs-input-group-button
-                  [value]="getConnectionString(vm, vm.nic[0].ipaddress)"
-                  tooltipPosition="below"
-                ></cs-clipboard-button>
-              </cs-input-group>
-            </h4>
-            <h4 class="height-container">
-              <b>{{ 'VM_POST_ACTION.CONNECTION_STRING_6' | translate }}:</b>
-              <cs-input-group>
-                <mat-form-field cs-input-group-textbox>
-                  <input matInput [value]="getConnectionString(vm, vm.nic[0].ip6address)" readonly>
-                </mat-form-field>
-                <cs-clipboard-button
-                  cs-input-group-button
-                  [value]="getConnectionString(vm, vm.nic[0].ip6address)"
-                  tooltipPosition="below"
-                ></cs-clipboard-button>
-              </cs-input-group>
-            </h4>
-            <h4 *ngIf="vm.nic[0]?.ipaddress"><b>{{ 'VM_POST_ACTION.IPv4' | translate }}:</b>
-              {{ vm.nic[0].ipaddress }}
-            </h4>
-            <h4 *ngIf="vm.nic[0]?.ipaddress"><b>{{ 'VM_POST_ACTION.IPv6' | translate }}:</b>
-              {{ vm.nic[0].ip6address }}
-            </h4>
-            <h4><b>{{ 'VM_POST_ACTION.PORT' | translate }}:</b>
-              {{ getSSHPort(vm) }}
-            </h4>
-            <h4><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b>
-              {{ getSSHLogin(vm) }}
-            </h4>
-            <h4>
-              <b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b>
-              {{ getSSHPassword(vm) }}
-            </h4>
-            <h4 *ngIf="vm.keyPair">
-              <b>{{ 'VM_POST_ACTION.SSH_KEY' | translate }}:</b>
-              <span *ngFor=" let key of getSSHKeys(vm.keyPair); let isLast=last">
-                {{ key }}{{ isLast ? '' : ', ' }}
-              </span>
-            </h4>
-          </div>
-          <div *ngIf="isWebShellEnabled()"
-               class="action-link">
-            <a (click)="act.activate(vm)">
-              {{ act.actionName | translate }}
-            </a>
-          </div>
-        </ng-container>
-      </mat-tab>
-    </ng-container>
-  </mat-tab-group>
+  <mat-tab [disabled]="!sshAccessService.isSshAuthMode(vm)" [label]="'VM_POST_ACTION.SHELL_CONSOLE' | translate">
+    <div class="parameter-wrapper">
+      <p>
+        <b>{{ 'VM_POST_ACTION.CONNECTION_STRING_4' | translate }}:</b>
+        {{ sshAccessService.getIpv4ConnectionString(vm) }}
+        <cs-clipboard-button
+          cs-input-group-button
+          [value]="sshAccessService.getIpv4ConnectionString(vm)"
+          tooltipPosition="below"
+        ></cs-clipboard-button>
+      </p>
+      <p *ngIf="vm.nic[0]?.ip6address">
+        <b>{{ 'VM_POST_ACTION.CONNECTION_STRING_6' | translate }}:</b>
+        {{ sshAccessService.getIpv6ConnectionString(vm) }}
+        <cs-clipboard-button
+          cs-input-group-button
+          [value]="sshAccessService.getIpv6ConnectionString(vm)"
+          tooltipPosition="below"
+        ></cs-clipboard-button>
+      </p>
+      <p *ngIf="vm.nic[0]?.ipaddress"><b>{{ 'VM_POST_ACTION.IPv4' | translate }}:</b> {{ vm.nic[0].ipaddress }}</p>
+      <p *ngIf="vm.nic[0]?.ip6address"><b>{{ 'VM_POST_ACTION.IPv6' | translate }}:</b> {{ vm.nic[0].ip6address }}</p>
+      <p><b>{{ 'VM_POST_ACTION.PORT' | translate }}:</b> {{ sshAccessService.getPort(vm) }}</p>
+      <p><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b> {{ sshAccessService.getLogin(vm) }}</p>
+      <p><b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b> {{ getSshPassword(vm) }}</p>
+      <p *ngIf="vm.keyPair">
+        <b>{{ 'VM_POST_ACTION.SSH_KEY' | translate }}: </b>
+        <span *ngFor=" let key of getSSHKeys(vm.keyPair); let isLast=last">
+          {{ key }}{{ isLast ? '' : ', ' }}
+        </span>
+      </p>
+    </div>
 
-  <div class="mat-dialog-actions">
-    <button
-      mat-button color="primary"
-      (click)="dialogRef.close()"
-    >{{ 'COMMON.CLOSE' | translate }}
-    </button>
-  </div>
+    <p *ngIf="sshAccessService.isWebShellEnabled()" class="action-link">
+      <a (click)="openWebShell(vm)">{{ 'VM_POST_ACTION.OPEN_SHELL_CONSOLE' | translate }}</a>
+    </p>
+  </mat-tab>
+
+  <mat-tab [disabled]="!httpAccessService.isHttpAuthMode(vm)" [label]="'VM_POST_ACTION.URL' | translate">
+    <div class="parameter-wrapper">
+      <p><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b> {{ httpAccessService.getLogin(vm) }}</p>
+      <p><b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b> {{ getUrlPassword(vm) }}</p>
+    </div>
+
+    <p class="action-link">
+      <b>{{ 'VM_POST_ACTION.OPEN_URL' | translate }}:</b>
+      <a (click)="openUrlVm(vm)"> {{ httpAccessService.getAddress(vm)}}</a>
+    </p>
+  </mat-tab>
+</mat-tab-group>
+
+<div class="mat-dialog-actions">
+  <button
+    mat-button color="primary"
+    (click)="dialogRef.close()"
+  >{{ 'COMMON.CLOSE' | translate }}
+  </button>
 </div>
