--- a/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
@@ -1,7 +1,7 @@
 <h3 mat-dialog-title>{{ 'VM_PAGE.COMMANDS.VM_ACCESS' | translate }}</h3>
 <mat-tab-group>
   <mat-tab mat-tab-class="my-class" [label]="'VM_POST_ACTION.VNC_CONSOLE' | translate">
-    <div class="parameter-wrapper">
+    <div class="parameters-wrapper">
       <p><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b> {{ vncAccessService.getLogin(vm) }}</p>
       <p><b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b> {{ getVncPassword(vm) }}</p>
     </div>
@@ -12,12 +12,11 @@
   </mat-tab>
 
   <mat-tab [disabled]="!sshAccessService.isSshAuthMode(vm)" [label]="'VM_POST_ACTION.SHELL_CONSOLE' | translate">
-    <div class="parameter-wrapper">
+    <div class="parameters-wrapper">
       <p>
         <b>{{ 'VM_POST_ACTION.CONNECTION_STRING_4' | translate }}:</b>
         {{ sshAccessService.getIpv4ConnectionString(vm) }}
         <cs-clipboard-button
-          cs-input-group-button
           [value]="sshAccessService.getIpv4ConnectionString(vm)"
           tooltipPosition="below"
         ></cs-clipboard-button>
@@ -26,12 +25,11 @@
         <b>{{ 'VM_POST_ACTION.CONNECTION_STRING_6' | translate }}:</b>
         {{ sshAccessService.getIpv6ConnectionString(vm) }}
         <cs-clipboard-button
-          cs-input-group-button
           [value]="sshAccessService.getIpv6ConnectionString(vm)"
           tooltipPosition="below"
         ></cs-clipboard-button>
       </p>
-      <p *ngIf="vm.nic[0]?.ipaddress"><b>{{ 'VM_POST_ACTION.IPv4' | translate }}:</b> {{ vm.nic[0].ipaddress }}</p>
+      <p><b>{{ 'VM_POST_ACTION.IPv4' | translate }}:</b> {{ vm.nic[0].ipaddress }}</p>
       <p *ngIf="vm.nic[0]?.ip6address"><b>{{ 'VM_POST_ACTION.IPv6' | translate }}:</b> {{ vm.nic[0].ip6address }}</p>
       <p><b>{{ 'VM_POST_ACTION.PORT' | translate }}:</b> {{ sshAccessService.getPort(vm) }}</p>
       <p><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b> {{ sshAccessService.getLogin(vm) }}</p>
@@ -50,7 +48,7 @@
   </mat-tab>
 
   <mat-tab [disabled]="!httpAccessService.isHttpAuthMode(vm)" [label]="'VM_POST_ACTION.URL' | translate">
-    <div class="parameter-wrapper">
+    <div class="parameters-wrapper">
       <p><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b> {{ httpAccessService.getLogin(vm) }}</p>
       <p><b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b> {{ getUrlPassword(vm) }}</p>
     </div>
