--- a/src/app/vm-logs/vm-logs/vm-logs.component.html
+++ b/src/app/vm-logs/vm-logs/vm-logs.component.html
@@ -1,7 +1,7 @@
 <cs-list [creationEnabled]="false">
   <ng-container cs-panels>
     <cs-top-bar>
-      <cs-logs-filter (onNewestFirstChange)="onNewestFirstChange()"></cs-logs-filter>
+      <cs-vm-logs-filter (onNewestFirstChange)="onNewestFirstChange()"></cs-vm-logs-filter>
     </cs-top-bar>
   </ng-container>
 
