--- a/src/app/vm-logs/vm-logs/vm-logs.component.scss
+++ b/src/app/vm-logs/vm-logs/vm-logs.component.scss
@@ -1,4 +1,4 @@
-@import '../../style/_variables';
+@import '../../../style/_variables';
 
 .fab {
   transition: margin .4s cubic-bezier(.25,.8,.25,1);
