--- a/src/app/vm-logs/vm-logs-table/vm-logs-table.component.scss
+++ b/src/app/vm-logs/vm-logs-table/vm-logs-table.component.scss
@@ -2,17 +2,31 @@
   padding: 15px;
 }
 
-table {
-  width: 100%;
+.mat-table {
   border: 1px solid rgba(0, 0, 0, .12);
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
 }
 
-td {
-  overflow: hidden;
-  text-overflow: ellipsis;
+.mat-row {
+  height: auto;
+}
 
-  & > * {
-    padding: 10px;
-  }
+.mat-cell {
+  word-break: break-word;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-right: 24px;
+  align-self: flex-start;
+}
+
+.mat-column-text {
+  flex: 1 0 50%;
+}
+
+.mat-header-cell {
+  padding-right: 24px;
+}
+
+.mat-column-text {
+  font-family: monospace, Roboto, 'Helvetica Neue', sans-serif;
 }
