fix monospace text in column header

--- a/src/app/vm-logs/vm-logs-table/vm-logs-table.component.html
+++ b/src/app/vm-logs/vm-logs-table/vm-logs-table.component.html
@@ -32,7 +32,9 @@
           {{ 'LOGS_PAGE.LIST.TEXT' | translate }}
         </mat-header-cell>
         <mat-cell *cdkCellDef="let element">
-          {{ element.log }}
+          <code>
+            {{ element.log }}
+          </code>
         </mat-cell>
       </ng-container>
 
