--- a/src/app/vm-logs/vm-log-keywords/vm-log-keywords.component.html
+++ b/src/app/vm-logs/vm-log-keywords/vm-log-keywords.component.html
@@ -1,14 +1,19 @@
-<mat-form-field>
+<mat-form-field class="keywords">
   <mat-chip-list #chipList>
-    <mat-chip *ngFor="let keyword of keywords" [selectable]="selectable"
-              [removable]="removable" (removed)="remove(keyword)">
+    <mat-chip
+      matChipRemove
+      *ngFor="let keyword of keywords"
+      (removed)="remove(keyword)"
+    >
       {{ keyword.text }}
-      <mat-icon matChipRemove *ngIf="removable" class="mdi-cancel"></mat-icon>
+      <mat-icon matChipRemove class="mdi-cancel"></mat-icon>
     </mat-chip>
-    <input placeholder="Tags"
-           [matChipInputFor]="chipList"
-           [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-           [matChipInputAddOnBlur]="addOnBlur"
-           (matChipInputTokenEnd)="add($event)">
+    <input
+      fullWidth
+      [placeholder]="'LOGS_PAGE.FILTERS.KEYWORDS' | translate"
+      [matChipInputFor]="chipList"
+      [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+      [matChipInputAddOnBlur]="true"
+      (matChipInputTokenEnd)="add($event)">
   </mat-chip-list>
 </mat-form-field>
