--- a/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
@@ -4,11 +4,12 @@
     <div class="parameters-wrapper">
       <p><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b> {{ vncAccessService.getLogin(vm) }}</p>
       <p><b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b> {{ getVncPassword(vm) }}</p>
-    </div>
 
-    <p class="action-link">
-      <a (click)="openConsoleVm(vm)">{{ 'VM_POST_ACTION.OPEN_VNC_CONSOLE' | translate }}</a>
-    </p>
+      <br>
+      <p class="action-link">
+        <a (click)="openConsoleVm(vm)">{{ 'VM_POST_ACTION.OPEN_VNC_CONSOLE' | translate }}</a>
+      </p>
+    </div>
   </mat-tab>
 
   <mat-tab [disabled]="!sshAccessService.isSshAuthMode(vm)" [label]="'VM_POST_ACTION.SHELL_CONSOLE' | translate">
@@ -40,31 +41,34 @@
           {{ vm.keyPair }}
         </span>
       </p>
-    </div>
 
-    <p *ngIf="sshAccessService.isWebShellEnabled()" class="action-link">
-      <a (click)="openWebShell(vm)">{{ 'VM_POST_ACTION.OPEN_SHELL_CONSOLE' | translate }}</a>
-    </p>
+      <br>
+      <p *ngIf="sshAccessService.isWebShellEnabled()" class="action-link">
+        <a (click)="openWebShell(vm)">{{ 'VM_POST_ACTION.OPEN_SHELL_CONSOLE' | translate }}</a>
+      </p>
+    </div>
   </mat-tab>
 
   <mat-tab [disabled]="!httpAccessService.isHttpAuthMode(vm)" [label]="'VM_POST_ACTION.URL' | translate">
     <div class="parameters-wrapper">
       <p><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b> {{ httpAccessService.getLogin(vm) }}</p>
       <p><b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b> {{ getUrlPassword(vm) }}</p>
+
+      <br>
+      <p>
+        <b>{{ 'VM_POST_ACTION.OPEN_URL' | translate }}:</b>
+        <ng-container *ngIf="isValidUrl(httpAccessService.getAddress(vm)); else invalidUrl">
+          <a class="action-link" (click)="openUrlVm(vm)"> {{ httpAccessService.getAddress(vm) }}</a>
+        </ng-container>
+        <ng-template #invalidUrl>
+          {{ httpAccessService.getAddress(vm) }}
+          <span class="error-message">
+            {{ 'ERRORS.VM_POST_ACTION.INVALID_URL' | translate }}
+          </span>
+        </ng-template>
+      </p>
     </div>
 
-    <p>
-      <b>{{ 'VM_POST_ACTION.OPEN_URL' | translate }}:</b>
-      <ng-container  *ngIf="isValidUrl(httpAccessService.getAddress(vm)); else invalidUrl">
-        <a  class="action-link" (click)="openUrlVm(vm)"> {{ httpAccessService.getAddress(vm) }}</a>
-      </ng-container>
-      <ng-template #invalidUrl>
-        <a> {{ httpAccessService.getAddress(vm) }}</a>
-        <span class="error-message">
-        {{ 'ERRORS.VM_POST_ACTION.INVALID_URL' | translate }}
-      </span>
-      </ng-template>
-    </p>
   </mat-tab>
 </mat-tab-group>
 
