refactor date picker label

--- a/src/app/events/components/event-list.component.html
+++ b/src/app/events/components/event-list.component.html
@@ -2,6 +2,7 @@
   <cs-top-bar cs-panels>
     <div class="filter-wrapper filter">
       <cs-date-picker
+        [label]="'EVENT_PAGE.SELECT_DATE' | translate"
         [okLabel]="'COMMON.OK' | translate"
         [locale]="locale"
         [firstDayOfWeek]="firstDayOfWeek"
