--- a/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
+++ b/src/app/snapshot/snapshots-page/snapshot-filter/snapshot-filter.component.html
@@ -42,6 +42,7 @@
   </mat-form-field>
 
   <cs-date-picker
+    [label]="'SNAPSHOT_PAGE.FILTERS.SELECT_DATE' | translate"
     [okLabel]="'COMMON.OK' | translate"
     [locale]="locale"
     [firstDayOfWeek]="firstDayOfWeek"
