--- a/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
+++ b/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
@@ -31,7 +31,7 @@
 
   <div class="date-time">
     <cs-date-picker
-      [label]="'LOGS_PAGE.FILTERS.START_DATE'"
+      [label]="'LOGS_PAGE.FILTERS.START_DATE' | translate"
       [okLabel]="'COMMON.OK' | translate"
       [locale]="locale"
       [firstDayOfWeek]="firstDayOfWeek"
@@ -51,7 +51,7 @@
 
   <div class="date-time">
     <cs-date-picker
-      [label]="'LOGS_PAGE.FILTERS.END_DATE'"
+      [label]="'LOGS_PAGE.FILTERS.END_DATE' | translate"
       [okLabel]="'COMMON.OK' | translate"
       [locale]="locale"
       [firstDayOfWeek]="firstDayOfWeek"
