--- a/src/app/shared/components/time-picker/time-picker.component.html
+++ b/src/app/shared/components/time-picker/time-picker.component.html
@@ -9,7 +9,7 @@
     [csMaxValue]="maxHourValue"
     [ngModel]="hour"
     (ngModelChange)="updateHour($event)"
-    [placeholder]="label | translate"
+    [placeholder]="label"
     #hourField
   >
 </mat-form-field>
