--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.html
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.html
@@ -1,19 +1,65 @@
+<mat-dialog-content>
 <div *loading="!affinityGroups || loading">
-  <cs-create-update-delete-dialog
-    [enableAssign]="affinityGroups?.length"
-    [enableRemove]="!!groupName"
-    [defaultValue]="groupName"
-    [options]="groupNames"
-    [assignLabel]="'VM_PAGE.VM_DETAILS.AFFINITY_GROUP.CHOOSE_EXISTING_GROUP'"
-    [createLabel]="'VM_PAGE.VM_DETAILS.AFFINITY_GROUP.CREATE_NEW_GROUP'"
-    [maxLength]="255"
-    [removeLabel]="'VM_PAGE.VM_DETAILS.AFFINITY_GROUP.REMOVE_FROM_GROUP'"
-    [selectPlaceholder]="'VM_PAGE.VM_DETAILS.AFFINITY_GROUP.CHOOSE_GROUP'"
-    [textFieldPlaceholder]="'VM_PAGE.VM_DETAILS.AFFINITY_GROUP.ENTER_GROUP_NAME'"
-    [title]="'VM_PAGE.VM_DETAILS.AFFINITY_GROUP.SELECT_AFFINITY_GROUP'"
-    (onAssigned)="changeGroup($event)"
-    (onCancel)="onCancel()"
-    (onCreated)="createGroup($event)"
-    (onRemoved)="removeGroup()"
-  ></cs-create-update-delete-dialog>
+  <form [formGroup]="affinityGroupForm" (ngSubmit)="createGroup()">
+    <mat-form-field>
+      <input
+        matInput
+        type="text"
+        formControlName="name"
+        [placeholder]="'AFFINITY_GROUP.NAME' | translate"
+      >
+      <mat-error *ngIf="affinityGroupForm.controls['name'].hasError('nameIsTaken')">
+        {{ 'VM_PAGE.VM_CREATION.THIS_NAME_IS_TAKEN' | translate }}
+      </mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <mat-select class="type" formControlName="type">
+        <mat-option *ngFor="let type of types" [value]="type">
+          {{ AffinityGroupTypesMap[type] }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field>
+      <input
+        matInput
+        type="text"
+        formControlName="description"
+        [placeholder]="'AFFINITY_GROUP.DESCRIPTION' | translate"
+      >
+    </mat-form-field>
+    <button
+      mat-icon-button
+      class="add-rule-button"
+      [disabled]="affinityGroupForm.invalid"
+    >
+      <mat-icon class="mdi-plus"></mat-icon>
+    </button>
+  </form>
+
+  <cs-affinity-group-list
+    [affinityGroups]="list"
+    [isVmCreation]="isVmCreation"
+    (selectedGroupChange)="changeGroup($event)"
+  ></cs-affinity-group-list>
+</div>
+
+</mat-dialog-content>
+<div class="mat-dialog-actions">
+  <button
+    mat-button
+    type="button"
+    color="primary"
+    (click)="onCancel.emit()"
+  >
+    {{ 'COMMON.CANCEL' | translate }}
+  </button>
+  <button
+    mat-button
+    type="button"
+    color="primary"
+    [disabled]="!selectedGroup"
+    (click)="submit()"
+  >
+    {{ 'COMMON.SELECT' | translate }}
+  </button>
 </div>
