--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.scss
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.scss
@@ -1,4 +1,9 @@
-:host {
-  position: relative;
-  display: block;
+mat-form-field {
+  width: 150px;
+}
+
+form {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
