--- a/src/app/shared/components/date-picker/date-picker.component.html
+++ b/src/app/shared/components/date-picker/date-picker.component.html
@@ -3,7 +3,7 @@
     <input
       matInput
       [(ngModel)]="displayDate"
-      [placeholder]="'EVENT_PAGE.SELECT_DATE' | translate"
+      [placeholder]="label"
       (focus)="onFocus($event)"
     >
   </mat-form-field>
