--- a/src/app/vm/vm-sidebar/vm-detail/affinity-group/affinity-group.component.html
+++ b/src/app/vm/vm-sidebar/vm-detail/affinity-group/affinity-group.component.html
@@ -6,7 +6,7 @@
   </mat-card-header>
   <mat-card-content class="mat-card-content-with-actions">
     <div class="mat-card-content-container">
-      <div  class="row" *ngFor="let affinityGroup of vm.affinityGroup">
+      <div  class="row" *ngFor="let affinityGroup of vm.affinitygroup">
         <div class="flex-container left">
           <span
             *ngIf="affinityGroup.description; else noDescription"
@@ -27,7 +27,7 @@
           {{ getAffinityGroupType(affinityGroup.id) }}
         </span>
       </div>
-      <div *ngIf="!vm.affinityGroup.length">
+      <div *ngIf="!vm.affinitygroup.length">
         {{ 'VM_PAGE.VM_DETAILS.AFFINITY_GROUP.NO_AFFINITY_GROUP' | translate }}
       </div>
     </div>
