--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.html
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-selector.component.html
@@ -37,7 +37,7 @@
     </form>
 
     <cs-affinity-group-list
-      [affinityGroups]="list"
+      [affinityGroups]="affinityGroups"
       [isVmCreation]="isVmCreation"
       (selectedGroupChange)="changeGroup($event)"
     ></cs-affinity-group-list>
