--- a/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
+++ b/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
@@ -29,6 +29,26 @@
     </mat-select>
   </mat-form-field>
 
+  <mat-form-field>
+    <mat-select
+      [placeholder]="'LOGS_PAGE.FILTERS.LOG_FILE' | translate"
+      [ngModel]="selectedLogFile"
+      (selectionChange)="onLogFileChange.emit($event.value)"
+    >
+      <mat-option [value]="null">
+        {{ 'LOGS_PAGE.FILTERS.LOG_FILE_NOT_SELECTED' | translate }}
+      </mat-option>
+      <mat-option
+        *ngFor="let logFile of logFiles"
+        [value]="logFile"
+      >
+        <span [matTooltip]="logFile.file">
+          {{ logFile.file | basepath }}
+        </span>
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
   <div class="date-time">
     <cs-date-picker
       [label]="'LOGS_PAGE.FILTERS.START_DATE' | translate"
