--- a/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.html
+++ b/src/app/vm/vm-sidebar/affinity-group-selector/affinity-group-list/affinity-group-list.component.html
@@ -3,25 +3,25 @@
     <table mat-table [dataSource]="affinityGroups">
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> {{ 'AFFINITY_GROUP.NAME' | translate }} </th>
-        <td [class.preselected]="element.isPreselected && !isVmCreation" mat-cell *matCellDef="let element">
+        <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
           <span [innerHTML]="element.name"></span>
         </td>
       </ng-container>
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef> {{ 'AFFINITY_GROUP.TYPE' | translate }} </th>
-        <td [class.preselected]="element.isPreselected && !isVmCreation" mat-cell *matCellDef="let element">
+        <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
           <span>{{ element.type | affinityGroupType }}</span>
         </td>
       </ng-container>
       <ng-container matColumnDef="description">
         <th mat-header-cell *matHeaderCellDef> {{ 'AFFINITY_GROUP.DESCRIPTION' | translate }} </th>
-        <td [class.preselected]="element.isPreselected && !isVmCreation" mat-cell *matCellDef="let element">
+        <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
           <span>{{ element.description }}</span>
         </td>
       </ng-container>
       <ng-container class="mat-column-radioButton" matColumnDef="radioButton">
         <th mat-header-cell *matHeaderCellDef></th>
-        <td [class.preselected]="element.isPreselected && !isVmCreation" mat-cell *matCellDef="let element">
+        <td [class.preselected]="element.isPreselected && enablePreselected" mat-cell *matCellDef="let element">
           <mat-radio-button
             name="service-offering"
             [value]="element"
