feat(vm-logs): log files

--- a/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
+++ b/src/app/vm-logs/vm-logs-filter/vm-logs-filter.component.html
@@ -40,7 +40,7 @@
       </mat-option>
       <mat-option
         *ngFor="let logFile of logFiles"
-        [value]="logFile"
+        [value]="logFile.file"
       >
         <span [matTooltip]="logFile.file">
           {{ logFile.file | basepath }}
