Fix tsc errors and lint errors

--- a/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
+++ b/src/app/vm/vm-actions/vm-actions-component/vm-access.component.html
@@ -35,10 +35,10 @@
       <p><b>{{ 'VM_POST_ACTION.PORT' | translate }}:</b> {{ sshAccessService.getPort(vm) }}</p>
       <p><b>{{ 'VM_POST_ACTION.LOGIN' | translate }}:</b> {{ sshAccessService.getLogin(vm) }}</p>
       <p><b>{{ 'VM_POST_ACTION.VM_PASSWORD' | translate }}:</b> {{ getSshPassword(vm) }}</p>
-      <p *ngIf="vm.keyPair">
+      <p *ngIf="vm.keypair">
         <b>{{ 'VM_POST_ACTION.SSH_KEY' | translate }}: </b>
         <span>
-          {{ vm.keyPair }}
+          {{ vm.keypair }}
         </span>
       </p>
 
