feat(vm-creation): distinguish between "VM display name" and "VM host name"

--- a/src/app/security-group/sg-sidebar/sg-vm-list/security-group-vm-list.component.html
+++ b/src/app/security-group/sg-sidebar/sg-vm-list/security-group-vm-list.component.html
@@ -20,7 +20,7 @@
               <a routerLink="{{ getVmLink(vm) }}">{{ vm.name }}</a>
             </ng-template>
             <ng-template [ngIf]="isModePrivate">
-              <span>{{ vm.name }}</span>
+              <span>{{ vm.displayname }}</span>
             </ng-template>
           </div>
         </div>
