--- a/src/app/shared/actions/volume-actions/volume-attachment/volume-attachment.component.html
+++ b/src/app/shared/actions/volume-actions/volume-attachment/volume-attachment.component.html
@@ -18,7 +18,7 @@
               *ngFor="let vm of virtualMachines"
               [value]="vm.id"
             >
-              {{ vm.name }}
+              {{ vm.displayname }}
             </mat-option>
           </mat-select>
         </mat-form-field>
