--- a/src/app/vm/vm-creation/postdeployment/postdeployment.component.html
+++ b/src/app/vm/vm-creation/postdeployment/postdeployment.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="vm">
   <h3>{{ title | translate }}</h3>
   <h4 class="truncate">
-    <b>{{ 'VM_POST_ACTION.VM' | translate }}: </b> {{ vm.name }}
+    <b>{{ 'VM_POST_ACTION.VM' | translate }}: </b> {{ vm.displayname }}
   </h4>
   <h4 *ngIf="!vm.isoid && vm.password">
     <cs-vm-password [vm]="vm"></cs-vm-password>
