--- a/src/app/vm/vm-list-item/row-item/vm-list-row-item.component.html
+++ b/src/app/vm/vm-list-item/row-item/vm-list-row-item.component.html
@@ -13,8 +13,8 @@
 
   <h2
     class="entity-list-item-title"
-    [matTooltip]="item.name"
-    [innerHTML]="item.name | highlight:query"
+    [matTooltip]="item.displayname"
+    [innerHTML]="item.displayname | highlight:query"
   ></h2>
 
   <div class="entity-list-item-data">{{ item.nic[0]?.ipaddress ? item.nic[0].ipaddress : ('VM_PAGE.CARD.IP_NA' | translate) }}</div>
