--- a/src/app/shared/components/draggable-select/draggable-select.component.html
+++ b/src/app/shared/components/draggable-select/draggable-select.component.html
@@ -4,6 +4,7 @@
   aria-hidden="true"
   (click)="toggle()"
   #origin="cdkOverlayOrigin"
+  #trigger
 >
   <div class="mat-select-value">
     <ng-container *ngIf="empty">&nbsp;</ng-container>
@@ -33,6 +34,7 @@
 >
 
   <div
+    #panel
     class="mat-select-panel draggable-select-panel {{ _getPanelTheme() }}"
     [ngClass]="panelClass"
     [@transformPanel]="multiple ? 'showing-multiple' : 'showing'"
