Add layout store

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <mat-sidenav-container fullscreen>
-  <mat-sidenav #sidenav>
-    <cs-app-nav [routes]="routes$ | async" [currentRoute]="currentRoute$ | async" (close)="sidenav.close()"></cs-app-nav>
+  <mat-sidenav [opened]="showAppNav$ | async">
+    <cs-app-nav [routes]="routes$ | async" [currentRoute]="currentRoute$ | async" (close)="closeAppNav()"></cs-app-nav>
   </mat-sidenav>
 
   <mat-sidenav-content>
-    <cs-section-nav [username]="username" [subroutes]="subroutes$ | async" (openAppNav)="sidenav.open()"></cs-section-nav>
+    <cs-section-nav [username]="username" [subroutes]="subroutes$ | async" (openAppNav)="openAppNav()"></cs-section-nav>
     <div class="primary-content">
       <router-outlet></router-outlet>
     </div>
